Update EmailJS service ID in index.html

--- a/index.html
+++ b/index.html
@@ -2886,7 +2886,7 @@
 
         // Para usar EmailJS de verdade:
         emailjs
-          .send('service_k40b3ka', 'YOUR_TEMPLATE_ID', templateParams)
+          .send('service_57xzpl9', 'YOUR_TEMPLATE_ID', templateParams)
           .then(
             function (response) {
               document.getElementById('statusEnvio').innerHTML = `
