Update salary and replace HTML content in index.html

--- a/index.html
+++ b/index.html
@@ -2418,7 +2418,7 @@
         for (let i = 0; i < qtd; i++) {
           estado.funcionarios.push({
             cargo: '',
-            salario: 1412,
+            salario: 1518,
             tipo: 'clt',
           });
         }
@@ -2868,7 +2868,7 @@
             document.getElementById('nomeEmpresa').value || 'Empresa',
           resumo: document
             .getElementById('resumoCompleto')
-            .innerHTML.replace(/<[^>]*>/g, ' '),
+            .innerHTML.replace(/<[^>]*>/g, ' template_ib4ousd'),
         };
 
         // Mostrar loading
