Clear placeholder and value for capitalInicial input

--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
               type="number"
               id="capitalInicial"
               class="form-control"
-              placeholder="50000"
-              value="50000"
+              placeholder=""
+              value=""
             />
           </div>
 
