--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
 
     <script>
       // Inicialização do EmailJS
-      emailjs.init('YOUR_PUBLIC_KEY'); // Substitua com sua chave pública do EmailJS
+      emailjs.init('service_poab97r'); // Substitua com sua chave pública do EmailJS
 
       // Estado da aplicação
       let estado = {
