--- a/index.html
+++ b/index.html
@@ -2868,7 +2868,7 @@
             document.getElementById('nomeEmpresa').value || 'Empresa',
           resumo: document
             .getElementById('resumoCompleto')
-            .innerHTML.replace(/<[^>]*>/g, 'templateParams'),
+            .innerHTML.replace(/<[^>]*>/g, 'template_ib4ousd'),
         };
 
         // Mostrar loading
