Update EmailJS template ID in index.html

--- a/index.html
+++ b/index.html
@@ -2886,7 +2886,7 @@
 
         // Para usar EmailJS de verdade:
         emailjs
-          .send('EnkBeiIKu-X8maD-Y','service_25g4v03', templateParams)
+          .send('EnkBeiIKu-X8maD-Y','template_ib4ousd', templateParams)
           .then(
             function (response) {
               document.getElementById('statusEnvio').innerHTML = `
